src/negative_test_cases/Testcases/param_list_paren_mismatch.stl
%%%
func1 is missing a closing paranthesis for the optional parameter list. This
program should not compile for this reason. This program does not have
valid syntax according to the grammar.

%%%

void main()
{
}

void func1(
{
}
